# fastapi-invoice-app

./: .gitignore  LICENSE  Makefile  README.md  SQL_FOREGIN_KEY.md  alembic.ini  pyproject.toml
app/: __main__.py  conftest.py  paths.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 2022-11-18-16-44_init.py  2022-11-21-12-05_init.py
app/core/: auth.py  helpers.py  mail.py  settings.py
app/db/: base.py  dependencies.py  init_data.py  init_db.py  meta.py  utils.py
app/models/: __init__.py  client_contact.py  client_contact_model.py  invoice_contact.py  invoice_contact_model.py  invoice_item_model.py  invoice_model.py  note_model.py
app/routes/: __init__.py  application.py  lifetime.py  router.py  token.py
app/routes/client_contact/: __init__.py  client_contact_dao.py  client_contact_view.py
app/routes/invoice/: __init__.py  invoice_dao.py  invoice_view.py
app/routes/invoice_contact/: __init__.py  invoice_contact_dao.py  invoice_contact_view.py
app/routes/invoice_item/: __init__.py  invoice_item_dao.py  invoice_item_view.py
app/routes/note/: __init__.py  note_dao.py  note_view.py
app/routes/super_admin/: __init__.py  super_admin_views.py
envs/: dev.example.env
